<resources>
    <string name="app_name">Application Gestion Alt Shop</string>
    <string name="action_settings">Paramètres</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label"></string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Panel">Panel</string>
    <string name="login">Login</string>
    <string name="button_accueil">Button</string>
    <string name="addition_nb1">addition_nb1</string>
    <string name="addition_nb2">addition_nb2</string>
    <string name="resultat">resultat</string>
    <string name="button_additionner">button_additionner</string>
    <string name="a_propos">Produits</string>
    <string name="appel_api_client_">Afficher les produits</string>
    <string name="textview">TextView</string>
    <string name="retour_accueil">RETOUR ACCUEIL</string>
    <string name="button_afficher_produit">Afficher les produits</string>
    <string name="User">User</string>
    <string name="Bienvenue">Bienvenue sur AltShop</string>
    <string name="Categorie">Categorie</string>
    <string name="buttonaffichercategorie">AfficherCategorie</string>
    <string name="afficher_categorie">Afficher categorie</string>
    <string name="retour_accueil_depuis_categorie">Retour accueil</string>
    <string name="textview2">TextView</string>
    <string name="afficher_user">Afficher User</string>
</resources>